# macos-app-trial-extender

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .release-it.json  .release-it.ts  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  rust-toolchain.toml  svelte.config.js  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.dev/: _core.js  cz-config.cjs  readme.js  release.js  updater.js
.dev/husky/: pre-commit
.dev/templates/: mark.js  readme.js  releaseIt.js  updater.js
.dovenv/: app.info.js  app.info.ts  contributors.js  git.js  index.js  mark.js  readme.js  types.ts
.dovenv/add-test/: add-member.ts  add-test.ts  ask-member.ts  ask-test.ts  const.ts  index.ts  types.ts  utils.ts
.dovenv/husky/: commit-msg  pre-commit
.dovenv/project.inlang/: project_id  settings.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: dev-info.md
docs/todo/: v1.md
project.inlang/: settings.json
src/: app.css  app.d.ts  app.html  const.ts  hooks.client.ts  hooks.server.js  hooks.server.ts  hooks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  dock.rs  locale.rs  main.rs  tray.rs
src/_core/: index.ts  main.ts
src/_core/app/: autostart.ts  index.ts  main.ts
src/_core/i18n/: index.ts  main.ts
src/_core/notification/: index.ts  main.ts
src/_core/path/: index.ts  main.ts  types.ts  watcher.ts
src/_core/reset/: index.ts
src/_core/store/: index.ts  main.ts
src/_core/theme/: index.ts  main.ts
src/_core/time/: index.ts  main.ts
src/_core/tray/: index.ts
src/_core/window/: index.ts  main.ts
src/_locales/: index.ts
src/_locales/ca/: common.json  tray.json
src/_locales/en/: common.json  tray.json
src/_locales/es/: common.json  tray.json
src/const/: index.ts
src/core/: _super.svelte.ts  i18n.svelte.ts  index.svelte.ts  page.svelte.ts  reset.svelte.ts  settings.svelte.ts  store.svelte.ts  tray.svelte.ts
src/core/_super/_shared/: async.svelte.ts  onchange.svelte.ts  persisted-async.svelte.ts  persisted.svelte.ts
src/core/_super/autostart/: index.svelte.ts  index.ts
src/core/_super/fs/: index.ts  types.ts  watcher.ts
src/core/_super/log/: index.ts
src/core/_super/os/: index.ts
src/lib/: index.js  index.ts  types.ts
src/lib/assets/: index.ts
src/lib/badge/: main.svelte
src/lib/btn/: main.svelte  sidebar.svelte
src/lib/components/: index.ts
src/lib/fa/: main.ts
src/lib/i18n/: get.ts  hook.ts  index.ts
src/lib/input/: lang-select.svelte  pass.svelte  toggle.svelte
src/lib/load-component/: main.svelte
src/lib/section/: main.svelte
src/lib/spinner/: main.svelte
src/lib/table/: body.svelte  full.svelte  head.svelte  index.js  root.svelte
src/lib/typo/: h.svelte  p.svelte
src/lib/ui/: avatar.svelte  btn-sidebar.svelte  btn.svelte  config.svelte  dot.svelte  error-content.svelte  index.ts  info-item.svelte  lang-select.svelte  types.ts
src/locales/: ca.json  en.json  es.json  lang.json
src/locales/ca/: tray.json
src/locales/en/: common.json  tray.json
src/locales/es/: common.json  tray.json
src/params/: locale.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/[...lang=locale]/: +page.svelte
src/routes/[lang]/: +page.svelte
src/routes/info/: +page.svelte
src/routes/settings/: +page.svelte
src/styles/: app.css  avatar.css  badge.css  icon.css  index.ts  input.css  section.css  table.css  theme.ts  ui.css
(+45 files in other folders)
