[package]
	name = "mate"
	version = "1.0.5"
	description = "Extend the trial time for macos apps like logicpro or finalcutpro"
	authors = [ "angelo <angelo@pigeonpossse.com>" ]
	license = "gpl-3"
	repository = "https://github.com/angelespejo/macos-app-trial-extender"
	edition = "2021"

[build-dependencies]
	tauri-build = { version = "2.6.1", features = [] }

[dependencies]
	tauri = { version = "2.11.1", features = [
		"tray-icon",
		"image-ico",
		"image-png",
	] }
	serde = { version = "1.0", features = [ "derive" ] }
	serde_json = "1.0"

	# Tauri dependencies and plugins
	tauri-plugin-single-instance = "2.4.2"
	tauri-plugin-dialog = "2.7.1"
	tauri-plugin-fs = { version = "2.5.1", features = [ "watch" ] }
	tauri-plugin-notification = "2.3.3"
	tauri-plugin-updater = "2.10.1"
	tauri-plugin-shell = "2.3.5"
	tauri-plugin-os = "2.3.2"
	tauri-plugin-autostart = "2.5.1"
	tauri-plugin-log = "2.8.0"
	tauri-plugin-store = "2.4.3"

[features]
	# this feature is used for production builds or when `devPath` points to the filesystem
	# DO NOT REMOVE!!
	custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]



